--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ main ul li a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #efddb7;
+  background-color: #f5f3ee;
   border-style: solid;
   border-color: white;
   border-radius: 10px;
